--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "start": "electron ."
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "nuxt": "^3.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.1",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "sass": "^1.57.1"
   }
 }
