--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron --trace-warnings .",
+    "generate": "cd ./client && npm run generate"
   },
   "repository": {
     "type": "git",
