--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "generate": "cd ./client && npm run generate"
+    "generate": "cd ./src/client && npm run generate"
   },
   "repository": {
     "type": "git",
