dev server done

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "electron .",
-    "build": "nuxt build",
+    "start": "electron ./dist/main/index.js",
+    "startDev": "electron ./dist/main/index.js --dev",
+    "build": "tsc",
     "dev": "nuxt dev",
     "generate": "nuxi generate",
     "preview": "nuxt preview",
