--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "tsc -p ./src/main/tsconfig.json && node ./dist/main/scripts/devServer.js",
     "compile": "tsc -p ./src/main/tsconfig.json",
     "startElectronDev": "electron ./dist/main/index.js --dev",
+    "preBuild": "tsc -p ./src/main/tsconfig.json && nuxi generate",
     "build:linux": "electron-builder -l",
     "build:win": "electron-builder -w",
     "pack": "electron-builder --dir",
@@ -53,6 +54,17 @@
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true
-    }
+    },
+    "files": [
+      "package.json",
+      {
+        "from": "./dist/main",
+        "to": "./dist/main"
+      }, 
+      {
+        "from": "./.output/public",
+        "to": "./.output/public"
+      }
+    ]
   }
 }
