--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mikecerc/Electron-Battery-Logger.git"
+    "url": "git+https://github.com/frc-862/Digital-Battery-Log-v2"
   },
   "author": "Michael Cercone",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Mikecerc/Electron-Battery-Logger/issues"
+    "url": "https://github.com/frc-862/Digital-Battery-Log-v2/issues"
   },
-  "homepage": "https://github.com/Mikecerc/Electron-Battery-Logger#readme",
+  "homepage": "https://github.com/frc-862/Digital-Battery-Log-v2#readme",
   "dependencies": {
     "electron-store": "^8.1.0",
     "mongoose": "^6.9.1",
